minor bug fixes and fixing hardcoded to db_services
