# back-end/docs/swagger.json
@@ -1850,6 +1850,14 @@
             "schema": {
               "type": "string"
             }
+          },
+          {
+            "name": "instituteId",
+            "required": true,
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
           }
         ],
         "responses": {
